show menu 로 메뉴 보여주기

--- a/20230609_nav/css/style.css
+++ b/20230609_nav/css/style.css
@@ -115,5 +115,9 @@ nav {
     }
     /* .show-menu 하면, .nav-list 보이게 */
     /* .show-menu 하면, .nav-toggle 아래로 */
+
+    .show-menu{
+        height: 150px;
+    }
 }
 
