--- a/20230620_bookreviewcalendar/css/bookshelf.css
+++ b/20230620_bookreviewcalendar/css/bookshelf.css
@@ -4,6 +4,9 @@
     flex-wrap: wrap;
     gap: 80px; /* row-gap: 20px; coulmn-gap: 20px */
     justify-content: center;
+    max-width: calc(150px * 4 + 80px * 3);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .row-container {
