--- a/20230620_bookreviewcalendar/css/review.css
+++ b/20230620_bookreviewcalendar/css/review.css
@@ -1,9 +1,20 @@
 main {
+    margin: 0 auto;
     margin-top: calc(44px + 100px);
+    width: calc(100% - 100px * 2);
 }
 
 .container {
     display: flex;
+}
+
+.book-image {
+    width: 200px;
+    min-width: 200px;   /*이미지 너비가 자동으로 줄어드는 오류 해결*/
+}
+
+.book-image > img{
+    display: block; /* 하얀 여백 날아감 */
 }
 
 .image-info-groups {
@@ -12,55 +23,68 @@ main {
 
 .info-groups {
     flex-wrap: wrap;
+    margin: 0 40px;
+    gap: 40px;
 }
 
 .info-group {
     flex-direction: column;
+    gap: 40px;
 }
 
 .info {
     flex-direction: column;
+     /* height: 100px; */
+}
+
+.title, 
+.author,
+.publisher,
+.read-date,
+.synopsis,
+.phrase {
+    font-size: 1.25rem;
+}
+
+.label {
+    color: #999;
+}
+
+.synopsis > input,
+.phrase > input {
+    width: 100%;
+    height: 2rem;
 }
 
 .reviews {
     flex-direction: column;
+    margin: 40px 0;
+    gap: 40px;
 } 
 
 .review {
     flex-direction: column;
+    /* height: 100px; */
 }
 
 @media screen and (max-width: 540px) {
+    main {
+        margin-top: calc(44px + 40px);
+    }
     .image-info-groups {
         flex-direction: column;
     }
 
+    .book-image {
+        margin: 0 auto;
+    }
+
     .info-groups {
         flex-direction: column;
+        margin: 40px 0 0;
     }
 }
 
-/* delete me */
-main div {
-    border: 2px solid black;
-}
 
-.book-image {
-    background-color: bisque;
-    width: 200px;
-    min-width: 200px;
-    height: 400px;
-}
-
-.info {
-    background-color: tomato;
-    width: 200px;
-    height: 100px;
-}
-
-.review {
-    background-color: khaki;
-    height: 100px;
-}
 
 
