--- a/20230620_bookreviewcalendar/css/review.css
+++ b/20230620_bookreviewcalendar/css/review.css
@@ -25,11 +25,13 @@ main {
     flex-wrap: wrap;
     margin: 0 40px;
     gap: 40px;
+    min-width: 200px; /* ... */
 }
 
 .info-group {
     flex-direction: column;
     gap: 40px;
+    overflow: hidden; /* ... */
 }
 
 .info {
@@ -44,6 +46,9 @@ main {
 .synopsis,
 .phrase {
     font-size: 1.25rem;
+    white-space: nowrap;
+    overflow: hidden; /*...*/
+    text-overflow: ellipsis; /* ... */
 }
 
 .label {
