--- a/20230825_grid/css/2-4.css
+++ b/20230825_grid/css/2-4.css
@@ -7,6 +7,10 @@
     font-weight: 500;
 }
 
+html, body {
+    height: 100%;
+}
+
 .item {
     border: 2px solid black;
     padding: 10px;
@@ -20,6 +24,7 @@
     display: grid;
     grid-template-rows: repeat(8, 1fr);
     grid-template-columns: repeat(6, 1fr);
+    height: 100%;
 }
 
 .weekday {
@@ -70,6 +75,7 @@
     background-color: #cceaba; 
     grid-column: -2 / -1;
     grid-row: 3 / 5;
+    display: flex;
     /* grid-row: 5 / 3 ; */
     /* grid-row: 3 / span 2;
     grid-row: span 2 / 3; 바뀌면 안된다 */ 
@@ -80,6 +86,7 @@
     background-color: #cceaba; 
     grid-column: 2 / span 1;
     grid-row: 4 / span 2;
+    text-align: center;
 }
 
 .item:nth-child(20) {
@@ -98,6 +105,7 @@
     background-color: #cceaba; 
     grid-column: 6 / span 1;
     grid-row: 6 / span 2;
+    text-align: center;
 }
 
 .item:nth-child(35) {
