실제 9월 달력 완성

--- a/20230620_bookreviewcalendar/css/calendar.css
+++ b/20230620_bookreviewcalendar/css/calendar.css
@@ -49,6 +49,10 @@ main {
     place-items: center;
 }
 
+.date.item:nth-child(1) {
+    grid-column: 6 / 7;
+}
+
 .review.flex-container {
     display: flex;
     flex-direction: column;
