토요일은 파랑색, 일요일은 빨간색으로 표시함

--- a/20230620_bookreviewcalendar/css/calendar.css
+++ b/20230620_bookreviewcalendar/css/calendar.css
@@ -53,6 +53,14 @@ main {
     grid-column: 6 / 7;
 }
 
+.date.item:nth-child(7n+2) {
+    color: blue;
+}
+
+.date.item:nth-child(7n+3) {
+    color: red;
+}
+
 .review.flex-container {
     display: flex;
     flex-direction: column;
